# research-doc-assistant

./: README.md
research-doc-assistant/research-doc-assistant/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
research-doc-assistant/research-doc-assistant/app/: __init__.py  main.py
research-doc-assistant/research-doc-assistant/app/api/: chat.py  documents.py
research-doc-assistant/research-doc-assistant/app/core/: __init__.py  llm_factory.py  logging.py
research-doc-assistant/research-doc-assistant/app/db/: cache.py  models.py
research-doc-assistant/research-doc-assistant/app/document/: chunker.py  parser.py
research-doc-assistant/research-doc-assistant/app/models/: schemas.py
research-doc-assistant/research-doc-assistant/app/rag/: chain.py  reranker.py  retriever.py  vector_store.py
research-doc-assistant/research-doc-assistant/app/workflow/: graph.py
research-doc-assistant/research-doc-assistant/scripts/: ingest.py
research-doc-assistant/research-doc-assistant/tests/: __init__.py  test_chunker.py  test_parser.py
