[project]
name = "research-doc-assistant"
version = "0.1.0"
description = "智能科研文档助手 - 基于 LangChain + LangGraph + RAG"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # === 核心 AI 框架 ===
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",
    # === 大模型与嵌入 ===
    "langchain-openai>=0.2.0",
    "dashscope>=1.20.0",           # 通义千问
    "langchain-ollama>=0.2.0",     # 本地 Ollama 模型
    # === RAG 检索 ===
    "rank-bm25>=0.2.2",            # BM25 稀疏检索
    "sentence-transformers>=3.0.0", # BGE/m3e 嵌入模型
    "FlagEmbedding>=1.2.0",         # BGE-reranker
    # === 文档解析 ===
    "pymupdf>=1.24.0",             # PDF 解析
    "pdfplumber>=0.11.0",          # PDF 表格提取
    "python-docx>=1.1.0",          # Word 解析
    "unstructured[pdf]>=0.15.0",   # 通用文档解析
    "pylatexenc>=2.10",            # LaTeX 解析
    # === 向量数据库 ===
    "chromadb>=0.5.0",             # Chroma 轻量向量库
    "faiss-cpu>=1.8.0",            # FAISS 内存检索
    "pymilvus>=2.4.0",             # Milvus 分布式向量库
    # === 后端服务 ===
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # === 存储 ===
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",             # PostgreSQL 异步驱动
    "redis>=5.0.0",
    "aioredis>=2.0.0",
    # === 工具 ===
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "jieba>=0.42.1",               # 中文分词
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
